# notesearch

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
deployment/: DEPLOYMENT_README.md  README.md  README_GPU.md  deploy.sh  deploy_v2.sh  gunicorn.conf.py  restart_service.sh  test_gpu_setup.py
src/semantic_notes/: __init__.py  api.py  cli.py  config.py  embeddings.py  indexer.py  models.py  text_processing.py  vector_store.py
tests/: test_config.py
